overflow fixes

--- a/wp-content/plugins/ra7-helper-plugin/blocks/fr-qc-key-findings/block.css
+++ b/wp-content/plugins/ra7-helper-plugin/blocks/fr-qc-key-findings/block.css
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 30px 0 ;
+  overflow: hidden;
 }
 
 #fr-qc-key-findings-slider {
